--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     
     <title>Fayzullo Uber Dasturchi | Fayzullo Dasturchi</title>
+    <meta name="google-site-verification" content="mUuBEZkvFUjvSCSi_K1FXYvj-lpPCIVNaqX-6WDuae4" />
 
     <meta name="title" content="Fayzullo Uber Dasturchi | Fayzullo Dasturchi">
     <meta name="description" content="Fayzullo Dasturchi , yoshim 12 da , fargona viloyatidanman. Dasturlash sohasida 13 yil tajribam bor.">
